--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -19,8 +19,8 @@ jobs:
 
       - name: Build and push Docker image
         env:
-          DOCKER_USERNAME: atharv1398  # Replace with your Docker Hub username
-          DOCKER_TOKEN: dckr_pat_yNzQiiiHk2UcRNgXM0UImzf1poU  # Replace with your Docker Hub personal access token
+          DOCKER_USERNAME: atharv1398
+          DOCKER_TOKEN: ${{ secrets.dckr_pat_6w4tpA7ms1ojVBfyWTNArnU-D8I }}
         run: |
           docker buildx create --use
           echo "$DOCKER_TOKEN" | docker login -u $DOCKER_USERNAME --password-stdin
