--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Build and push Docker image
         env:
           DOCKER_USERNAME: atharv1398
-          DOCKER_TOKEN: ${{ secrets.dckr_pat_6w4tpA7ms1ojVBfyWTNArnU-D8I }}
+          DOCKER_TOKEN: dckr_pat_6w4tpA7ms1ojVBfyWTNArnU-D8I
         run: |
           docker buildx create --use
           echo "$DOCKER_TOKEN" | docker login -u $DOCKER_USERNAME --password-stdin
