--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -23,7 +23,7 @@ jobs:
           DOCKER_TOKEN: dckr_pat_6w4tpA7ms1ojVBfyWTNArnU-D8I
         run: |
           docker buildx create --use
-          echo "$DOCKER_TOKEN" | docker login -u $DOCKER_USERNAME --password-stdin
+          docker login -u $DOCKER_USERNAME -p $DOCKER_TOKEN
           docker buildx build --platform linux/amd64,linux/arm64 -t ${{ github.repository }}:${{ github.sha }} -t ${{ github.repository }}:latest .
           docker push ${{ github.repository }}:${{ github.sha }}
           docker push ${{ github.repository }}:latest
