--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,3 @@
-# E:\MEDPRIME\.github/workflows/docker-build.yml
 name: Docker Build and Publish
 
 on:
@@ -20,10 +19,10 @@ jobs:
       - name: Build and push Docker image
         env:
           DOCKER_USERNAME: atharv1398
-          DOCKER_TOKEN: dckr_pat_6w4tpA7ms1ojVBfyWTNArnU-D8I
+          DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
         run: |
+          echo $DOCKER_TOKEN | docker login -u $DOCKER_USERNAME --password-stdin
           docker buildx create --use
-          docker login -u $DOCKER_USERNAME -p $DOCKER_TOKEN
           docker buildx build --platform linux/amd64,linux/arm64 -t ${{ github.repository }}:${{ github.sha }} -t ${{ github.repository }}:latest .
           docker push ${{ github.repository }}:${{ github.sha }}
           docker push ${{ github.repository }}:latest
