--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -17,12 +17,9 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Docker Login
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-          server-url: https://index.docker.io/v1/
-
+        run: |
+          echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
+          
       - name: Build and push Docker image
         run: |
           docker buildx create --use
