--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -16,8 +16,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+      - name: Configure Docker credentials
+        run: |
+          echo "{\"auths\":{\"docker.io\":{\"username\":\"${DOCKER_USERNAME}\",\"password\":\"${DOCKER_PASSWORD}\",\"email\":\"\"}}}" > ~/docker/config.json
+
       - name: Docker Login
-        run: echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
+        run: docker login --config ~/docker/config.json
 
       - name: Build and push Docker image
         run: |
